k8s/juice-fs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: juicefs-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: juicefs-system
spec:
  ports:
    - port: 6379
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: nginx:latest
          volumeMounts:
            - name: shared-storage
              mountPath: /data
          ports:
            - containerPort: 80
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-juicefs-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: debian:bookworm-slim
          command: [ "sleep", "infinity" ]
          volumeMounts:
            - name: shared-storage
              mountPath: /mnt/shared-data
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-juicefs-pvc
